--- a/conversorMedidas/src/app/home/home.page.scss
+++ b/conversorMedidas/src/app/home/home.page.scss
@@ -1,27 +1,56 @@
-#container {
+ion-card {
+  border-radius: 15px;
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.15);
+  margin-bottom: 15px;
+}
+
+ion-card-title {
+  font-size: 1.4rem;
+  font-weight: bold;
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  color: #2c3e50;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-button {
+  --background: #007aff;
+  --border-radius: 10px;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 10px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-item {
+  border-radius: 8px;
+  margin-bottom: 10px;
 }
 
-#container a {
-  text-decoration: none;
+ion-label {
+  font-weight: bold;
+  color: #333;
 }
+
+ion-input {
+  //border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 8px;
+  background-color: white;
+  text-align: right;
+}
+
+ion-radio-group, ion-checkbox {
+  margin-left: 10px;
+}
+
+/* Estilos para los resultados */
+p {
+  background-color: #f1f8ff;
+  color: #0056b3;
+  padding: 12px;
+  border-radius: 8px;
+  font-size: 1.2rem;
+  text-align: center;
+  font-weight: bold;
+  border: 2px solid #0056b3;
+  margin-top: 10px;
+}
+
