--- a/conversorMedidas/src/app/home/home.page.html
+++ b/conversorMedidas/src/app/home/home.page.html
@@ -88,7 +88,7 @@
     </ion-card-content>
   </ion-card>
 
-  <!-- Conversor de Temperatura (Escala inicial con Lista, Convertir con Checkboxes) -->
+  <!-- Conversor de Temperatura (Convertir con Checkboxes) -->
   <ion-card *ngIf="seccionActiva === 'temperatura'">
     <ion-card-header>
       <ion-card-title>Convertir Temperatura</ion-card-title>
